--- a/Biblioteca/Biblioteca.Data/App.config
+++ b/Biblioteca/Biblioteca.Data/App.config
@@ -1,9 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <connectionStrings>
+    <add name="BibliotecaMaestro" providerName="System.Data.SqlClient" connectionString="Data Source=10.46.1.18;
+           Initial Catalog=BibliotecaJorge; User Id=sa; Password=password1;"/>
+
+    <add name="BibliotecaLocal" providerName="System.Data.SqlClient" connectionString="Data Source=.;
+           Initial Catalog=BibliotecaJorge; Integrated Security=true;"/>
+
+  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
